@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
 Build-Depends: debhelper (>= 7), autotools-dev, libssl-dev
 Standards-Version: 3.8.3
-Homepage: https://code.google.com/p/libcaes/
+Homepage: https://github.com/libyal/libcaes/
 
 Package: libcaes
 Section: libs
