@@ -2,4 +2,3 @@ AUTHORS
 COPYING
 NEWS
 README
-README.macosx
