@@ -1,8 +1,9 @@
 [Project]
 name: "libcaes"
 status: "alpha"
+description: "a library to support cross-platform AES encryption"
 features: [
-    "debug_output",
+    "debug_output", "tests",
     "git", "source_package",
     "cygwin", "gcc", "mingw", "msvscpp",
     "dpkg", "rpm"]
@@ -11,13 +12,16 @@ features: [
 url: "https://googledrive.com/host/0B3fBvzttpiiSRzhrM2s3c1JnMkE/"
 
 [git]
-url: "https://code.google.com/p/libcaes/"
+url: "https://github.com/libyal/libcaes.git"
+
+[tests]
+features: ["valgrind"]
 
 [cygwin]
 build_dependencies: [
     "openssl-devel (optional but recommended)"]
 dll_dependencies: [
-    "*TODO describe dependencies*"]
+    "**TODO describe dependencies**"]
 dll_filename: "cygcaes-0.dll"
 
 [gcc]
@@ -30,7 +34,7 @@ static_build_dependencies: [
 build_dependencies: [
     "Windows Crypto API (libadvapi32) (optional but recommended)"]
 dll_dependencies: [
-    "*TODO describe dependencies*"]
+    "**TODO describe dependencies**"]
 dll_filename: "libcaes-1.dll"
 
 [msvscpp]
