@@ -28,7 +28,7 @@ BEGIN
       VALUE "OriginalFilename",		"libcaes.dll\0"
       VALUE "ProductName",		"libcaes\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://code.google.com/p/libcaes/\0"
+      VALUE "Comments",			"For more information visit https://github.com/libyal/libcaes/\0"
     END
   END
   BLOCK "VarFileInfo"
