@@ -64,7 +64,7 @@ None
 None
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-https://code.google.com/p/libcaes/
+https://github.com/libyal/libcaes/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
